fix: layout shift on thumbnail imgs

--- a/src/components/Video.module.css
+++ b/src/components/Video.module.css
@@ -13,6 +13,7 @@
   border-radius: 0.4rem;
   line-height: 0;
   overflow: hidden;
+  width: 100%;
 }
 
 .thumbnail::after {
